# botdg

./: .gitignore  MIGRATION.md  README.md  deploy.sh  docker-compose.yml  env.example
telegram-likes-manager-bot/: Cargo.toml  Dockerfile  env.example
telegram-likes-manager-bot/src/: main.rs
telegram-reaction-bot/: .gitignore  Cargo.toml  Dockerfile  README.md  env.example
telegram-reaction-bot/src/: main.rs  main.rs.bak
