[package]
name = "telegram-likes-manager-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
thiserror = "1.0"
anyhow = "1.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
libloading = "0.7"
regex = "1.0"
